--- a/literature.bib
+++ b/literature.bib
@@ -196,3 +196,85 @@
 	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/anzs.12254},
 	langid = {en}
 }
+
+@article{george1993,
+	title = {On obtaining invariant prior distributions},
+	author = {George, Edward I. and McCulloch, Robert},
+	year = {1993},
+	month = {11},
+	date = {1993-11-01},
+	journal = {Journal of Statistical Planning and Inference},
+	pages = {169--179},
+	volume = {37},
+	number = {2},
+	doi = {10.1016/0378-3758(93)90086-L},
+	url = {https://www.sciencedirect.com/science/article/pii/037837589390086L}
+}
+
+@book{Burnham-Modelselectionand-2002,
+	title = {Model selection and multi-model inference: a practical information-theoretic approach},
+	author = {Burnham, Kenneth P and Anderson, David R},
+	year = {2002},
+	date = {2002},
+	publisher = {Springer Verlag},
+	note = {tex.owner: floha
+Citation Key: Burnham-Modelselectionand-2002}
+}
+
+@article{Kass-BayesFactors-1995,
+	title = {Bayes Factors},
+	author = {{Kass, R. E. And Raftery}, A. E.},
+	year = {1995},
+	month = {06},
+	date = {1995-06},
+	journal = {Journal of The American Statistical Association},
+	pages = {773--795},
+	volume = {90},
+	number = {430},
+	note = {tex.c1: UNIV WASHINGTON,DEPT STAT,SEATTLE,WA 98195.
+tex.de: BAYESIAN HYPOTHESIS TESTS; BIG; IMPORTANCE SAMPLING; LAPLACE METHOD;EOLEOLMARKOV CHAIN MONTE CARLO; MODEL SELECTION; MONTE CARLO INTEGRATION;EOLEOLPOSTERIOR MODEL PROBABILITIES; POSTERIOR ODDS; QUADRATURE; SCHWARZEOLEOLCRITERION; SENSITIVITY ANALYSIS; STRENGTH OF EVIDENCE
+tex.ga: RA104
+tex.j9: J AMER STATIST ASSN
+tex.ji: J. Am. Stat. Assoc.
+tex.la: English
+tex.nr: 181
+tex.owner: floha
+tex.pa: 1429 DUKE ST, ALEXANDRIA, VA 22314
+tex.pg: 23
+tex.pi: ALEXANDRIA
+tex.publisher: Amer Statist Assn
+tex.rp: KASS, RE, CARNEGIE MELLON UNIV,DEPT STAT,PITTSBURGH,PA 15213.
+tex.sc: Statistics & Probability
+tex.sn: 0162-1459
+tex.tc: 1960
+tex.ut: ISI:A1995RA10400045
+Citation Key: Kass-BayesFactors-1995}
+}
+
+@article{weinberg2012,
+	title = {Computing the Bayes factor from a Markov chain Monte Carlo simulation of the posterior distribution},
+	author = {Weinberg, Martin D},
+	year = {2012},
+	date = {2012},
+	journal = {Bayesian Analysis},
+	pages = {737--770},
+	volume = {7},
+	number = {3},
+	note = {tex.owner: floha
+tex.publisher: International Society for Bayesian Analysis
+Citation Key: Weinberg-ComputingBayesfactor-2012}
+}
+
+@article{DormannCarsten-Modelaveragingecology-2018,
+	title = {Model averaging in ecology: a review of Bayesian, information-theoretic, and tactical approaches for predictive inference},
+	author = {Dormann Carsten, F. and Calabrese Justin, M. and Gurutzeta, Guillera-Arroita and Eleni, Matechou and Volker, Bahn and Kamil, {BartoÅ{,,}} and Beale Colin, M. and Simone, Ciuti and Jane, Elith and Katharina, Gerstner and {JÃ©rÃ´me}, Guelat and Petr, Keil and {Lahoz-Monfort JosÃ©}, J. and Pollock Laura, J. and {BjÃ¶rn}, Reineking and Roberts David, R. and Boris, {SchrÃ¶der} and Wilfried, Thuiller and Warton David, I. and Wintle Brendan, A. and Wood Simon, N. and {WÃ¼est Rafael}, O. and Florian, Hartig},
+	year = {2018},
+	date = {2018},
+	journal = {Ecol Monogr},
+	volume = {0},
+	number = {0},
+	doi = {10.1002/ecm.1309},
+	url = {https://doi.org/10.1002/ecm.1309},
+	note = {tex.owner: floha
+Citation Key: DormannCarsten-Modelaveragingecology-2018}
+}
