--- a/4A-ErrorInVariable.qmd
+++ b/4A-ErrorInVariable.qmd
@@ -10,6 +10,11 @@ set.seed(42)
 
 # Error in variable models
 
+::: callout-note
+In this chapter, we will discuss 
+
+:::
+
 ## Regression dillution in distribution estimates
 
 ```{r, echo=F, warning=F, message=F}
