--- a/4D-AutoregressiveModels.qmd
+++ b/4D-AutoregressiveModels.qmd
@@ -10,6 +10,11 @@ set.seed(42)
 
 # Autoregressive models
 
+::: callout-note
+In this chapter, we will discuss 
+
+:::
+
 In general, autoregressive models should not be be fit with Jags, but with a
 
 ## Example with Jags
